css/style.css
/* ... */
.filter .list .tag .icone {
  background: #deebff;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  color: #0065fc;
  position: absolute;
}

.filter .list .tag .name {
  border-radius: 30px;
  padding: 15px;
  border: 3px #f2f2f2 solid;
  padding-left: 60px;
}

.filter .list .tag:hover {
  color: #0065fc;
  cursor: pointer;
}

@media only screen and (max-width: 600px) {
  .filter .title {
    display: none;
  }
}

@media only screen and (min-width: 993px) {
  .filter .title-mobile {
    display: none;
  }
}

@media only screen and (min-width: 601px) {
  .filter .title-mobile {
    display: none;
  }
}

.info {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin-top: 30px;
  margin-bottom: 30px;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  position: relative;
}

.info .icone {
  position: absolute;
  color: #0065fc;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  border-radius: 50%;
  width: 30px;
  height: 30px;
  border: #f2f2f2 solid 1px;
}

.info .texte {
  margin-left: 40px;
}

@media only screen and (max-width: 600px) {
  .info {
    margin-left: 20px;
  }
}

.hosting {
  margin-top: 20px;
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 63% auto;
      grid-template-columns: 63% auto;
  grid-gap: 40px;
}

.hosting .left {
  background: #f2f2f2;
  padding: 40px;
  border-radius: 20px;
}

.hosting .left .title {
  font-weight: bold;
  font-size: 22px;
  margin: 0;
}

.hosting .left .more {
  cursor: pointer;
  font-size: 20px;
  font-weight: bold;
  padding-top: 40px;
}

.hosting .left .list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-pack: distribute;
      justify-content: space-around;
  margin-top: 10px;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.hosting .left .list .card {
  margin-top: 20px;
  width: 186px;
  background: white;
  border-radius: 15px 15px 15px 15px;
  font-size: 15px;
  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  -webkit-box-flex: 0;
      -ms-flex: 0 0 47%;
          flex: 0 0 47%;
}

.hosting .left .list .card a {
  text-decoration: none;
  color: black;
}

.hosting .left .list .card .bold {
  font-weight: bold;
}

.hosting .left .list .card .logo {
  margin-top: 6px;
  text-align: center;
}

.hosting .left .list .card .logo img {
  border-radius: 8px 8px 0 0;
  width: 96%;
  height: 113px;
  -o-object-fit: cover;
     object-fit: cover;
}

.hosting .left .list .card .bottom {
  padding: 5px 10px 10px 10px;
}

.hosting .left .list .card .bottom .card-title {
  font-weight: bold;
  font-size: 14px;
  margin: 0;
}

.hosting .left .list .card .bottom .price {
  margin-top: 5px;
}

.hosting .left .list .card .bottom .stars {
  margin-top: 10px;
  color: #0065fc;
}

.hosting .left .list .card .bottom .grey {
  color: #f2f2f2;
}

.hosting .right {
  background: #f2f2f2;
  padding: 40px;
  border-radius: 20px;
}

.hosting .right .title-box {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.hosting .right .title-box .title {
  font-weight: bold;
  font-size: 22px;
  margin: 0;
}

.hosting .right .title-box .icone {
  font-size: 30px;
}

.hosting .right .list {
  margin-top: 20px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.hosting .right .list a {
  text-decoration: none;
  color: black;
}

.hosting .right .list .card {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  background: white;
  padding: 6px;
  border-radius: 20px;
  position: relative;
  margin-bottom: 30px;
}

.hosting .right .list .card .top .image img {
  border-radius: 15px 0px 0 15px;
  width: 140px;
  height: 135px;
  -o-object-fit: cover;
     object-fit: cover;
}

.hosting .right .list .card .bottom {
  margin-top: 10px;
  margin-left: 20px;
}

.hosting .right .list .card .bottom .title {
  font-weight: bold;
  font-size: 18px;
  margin: 0;
}

.hosting .right .list .card .bottom .price {
  margin-top: 10px;
  font-size: 15px;
}

.hosting .right .list .card .bottom .stars {
  position: absolute;
  bottom: 15px;
  margin-top: 10px;
  color: #0065fc;
}

.hosting .right .list .card .bottom .grey {
  color: #f2f2f2;
}

@media only screen and (min-width: 601px) {
  .hosting {
    -ms-grid-columns: 100%;
        grid-template-columns: 100%;
  }
  .hosting .left .list {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
  .hosting .left .list .card {
    width: 100%;
  }
}
/* ... */

